--- a/netlify-example/brush/index.html
+++ b/netlify-example/brush/index.html
@@ -30,6 +30,7 @@
         <li><a href="#" data-tool="SphericalBrush">SphericalBrush</a></li>
         <li><a href="#" data-tool="Probe">Probe</a></li>
         <li><a href="#" data-tool="ArrowAnnotate">ArrowAnnotate</a></li>
+        <li><a href="#" data-tool="EllipticalRoi">EllipticalRoi</a></li>
       </ul>
 
       <ul class="tool-category" data-tool-category="scissors">
