修改矩形工具

--- a/netlify-example/brush/index.html
+++ b/netlify-example/brush/index.html
@@ -32,6 +32,7 @@
         <li><a href="#" data-tool="ArrowAnnotate">ArrowAnnotate</a></li>
         <li><a href="#" data-tool="EllipticalRoi">EllipticalRoi</a></li>
         <li><a href="#" data-tool="FreehandRoi">FreehandRoi</a></li>
+        <li><a href="#" data-tool="RectangleRoi">RectangleRoi</a></li>
       </ul>
 
       <ul class="tool-category" data-tool-category="scissors">
