--- a/netlify-example/brush/index.html
+++ b/netlify-example/brush/index.html
@@ -31,6 +31,7 @@
         <li><a href="#" data-tool="Probe">Probe</a></li>
         <li><a href="#" data-tool="ArrowAnnotate">ArrowAnnotate</a></li>
         <li><a href="#" data-tool="EllipticalRoi">EllipticalRoi</a></li>
+        <li><a href="#" data-tool="EllipticalRoi2">EllipticalRoi2</a></li>
         <li><a href="#" data-tool="FreehandRoi">FreehandRoi</a></li>
         <li><a href="#" data-tool="RectangleRoi">RectangleRoi</a></li>
       </ul>
