--- a/netlify-example/brush/index.html
+++ b/netlify-example/brush/index.html
@@ -29,6 +29,7 @@
         <li><a href="#" data-tool="Brush">Brush</a></li>
         <li><a href="#" data-tool="SphericalBrush">SphericalBrush</a></li>
         <li><a href="#" data-tool="Probe">Probe</a></li>
+        <li><a href="#" data-tool="Length">Length</a></li>
         <li><a href="#" data-tool="ArrowAnnotate">ArrowAnnotate</a></li>
         <li><a href="#" data-tool="EllipticalRoi">EllipticalRoi</a></li>
         <li><a href="#" data-tool="EllipticalRoi2">EllipticalRoi2</a></li>
